# hanui

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  PERFORMANCE_AUDIT.md  README.md  build.rs  lefthook.yml  opencode.json  run-vm.sh  ssh-vm.sh
.cargo/: config.toml
.claude/agents/: backend-engineer.md  ci-gatekeeper.md  devex-engineer.md  ha-native-dashboard-architect.md  infra-engineer.md  performance-engineer.md  security-engineer.md  slint-engineer.md  task-planner.md
.claude/hooks/: lint-on-edit.sh
.claude/skills/dashboard-layout-engine/: SKILL.md
.claude/skills/ha-action-dispatcher/: SKILL.md
.claude/skills/ha-state-engine/: SKILL.md
.claude/skills/html-to-slint-widget/: LOVELACE_STYLE_GUIDE.md  SKILL.md
.claude/skills/kiosk-runtime/: SKILL.md
.claude/skills/opencode-execute/: SKILL.md
.claude/skills/opencode-review/: SKILL.md
.claude/skills/project-architecture/: SKILL.md
.claude/skills/render-optimization/: SKILL.md
.claude/skills/theme-and-design-tokens/: SKILL.md
.claude/skills/vm/: SKILL.md
.github/workflows/: ci.yml  nightly.yml  pr.yml
.opencode/agents/: backend-engineer.md  ci-gatekeeper.md  devex-engineer.md  infra-engineer.md  security-engineer.md  task-planner.md
benches/: baseline.json  churn.rs  dispatcher.rs
coverage/: baseline.json
docs/: DASHBOARD_SCHEMA.md  PHASES.md  cto.md
docs/dev/: PERFORMANCE.md
examples/: dashboard.yaml  ha-states.json  span_check.rs  span_check.slint
ops/checks/: coverage-ratchet.js  schema-doc-cotravel.sh
ops/checks/__tests__/: coverage-ratchet.test.js  schema-doc-cotravel.test.sh
ops/ha/: .gitignore  configuration.yaml  docker-compose.yml  provision-ha.sh
ops/pre-receive/: test-deletion.sh
src/: lib.rs  main.rs
src/actions/: dispatcher.rs  map.rs  mod.rs  pin.rs  queue.rs  schema.rs  service_map.rs  timing.rs  url.rs
src/assets/: icons.rs  mod.rs
src/audit/: mod.rs
src/dashboard/: fixture.rs  layout.rs  loader.rs  mod.rs  profiles.rs  schema.rs  validate.rs  view_spec.rs  visibility.rs
src/ha/: camera.rs  client.rs  entity.rs  fixture.rs  history.rs  http.rs  live_store.rs  mod.rs  protocol.rs  services.rs  store.rs
src/platform/: config.rs  mod.rs  status.rs
src/ui/: alarm.rs  bridge.rs  camera.rs  climate.rs  cover.rs  fan.rs  history_graph.rs  lock.rs  media_player.rs  mod.rs  more_info.rs  power_flow.rs  toast.rs  view_router.rs
tests/: integration_tests.rs  smoke.rs  soak_tests.rs
tests/common/: mock_ws.rs  mod.rs  slint_harness.rs
tests/integration/: actions_protocol.rs  actions_ui.rs  alarm.rs  audit.rs  camera.rs  camera_pool.rs  climate.rs  command_tx.rs  cover.rs  fan.rs  gesture_layer.rs  history.rs  lagged_resync.rs  layout.rs  loader.rs  lock.rs  lovelace_import.rs  media_player.rs  mock_ws.rs  mod.rs  more_info_modal.rs  offline_queue.rs  phase6_acceptance.rs  pin_entry.rs  power_flow.rs  schema_lock.rs  toast_spinner.rs  url_action.rs  validation.rs  view_router.rs  visibility.rs  ws_client.rs
tests/layout/: 01_single_widget.expected.json  01_single_widget.yaml  02_span_honored.expected.json  02_span_honored.yaml  03_wrap.expected.json  03_wrap.yaml  04_span_overflow.expected.json  04_span_overflow.yaml  05_mixed_kinds.expected.json  05_mixed_kinds.yaml  06_multi_section.expected.json  06_multi_section.yaml  alarm_idle.expected.json  alarm_idle.yaml  camera_idle.expected.json  camera_idle.yaml  climate_idle.expected.json  climate_idle.yaml  cover_idle.expected.json  cover_idle.yaml  fan_idle.expected.json  fan_idle.yaml  history_idle.expected.json  history_idle.yaml  lock_idle.expected.json  lock_idle.yaml  media_player_idle.expected.json  media_player_idle.yaml  power_flow_idle.expected.json  power_flow_idle.yaml  visibility_flip.expected.json  visibility_flip.yaml
tests/smoke/: mod.rs  sbc_cpu.rs
tests/soak/: memory.rs  mod.rs
tools/lovelace-import/: Cargo.toml  MAPPINGS.md
tools/lovelace-import/fixtures/: entities.expected.hanui.yaml  entities.lovelace.yaml  glance.expected.hanui.yaml  glance.lovelace.yaml  horizontal_stack.expected.hanui.yaml  horizontal_stack.lovelace.yaml  light.expected.hanui.yaml  light.lovelace.yaml  media_control.expected.hanui.yaml  media_control.lovelace.yaml  picture_entity.expected.hanui.yaml  picture_entity.lovelace.yaml  thermostat.expected.hanui.yaml  thermostat.lovelace.yaml  unmapped_button.expected.hanui.yaml  unmapped_button.expected.unmapped.txt  unmapped_button.lovelace.yaml  vertical_stack.expected.hanui.yaml  vertical_stack.lovelace.yaml
tools/lovelace-import/src/: lib.rs  main.rs  mappings.rs
tools/lovelace-import/tests/: e2e.rs
ui/slint/: alarm_panel_tile.slint  camera_snapshot_tile.slint  card_base.slint  climate_tile.slint  cover_tile.slint  entity_tile.slint  fan_tile.slint  gesture_config.slint  gesture_test_window.slint  history_graph_tile.slint  light_tile.slint  lock_tile.slint  main_window.slint  media_player_tile.slint  more_info.slint  pin_entry.slint  power_flow_tile.slint  sensor_tile.slint  theme.slint  toast.slint  validation_error.slint  view.slint  view_router.slint  view_switcher.slint
ui/slint/components/: position_slider.slint
vm/cloud-init/: meta-data  user-data
vm/keys/: id_ed25519.pub
