[package]
name = "hanui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hanui"
path = "src/main.rs"

[lib]
name = "hanui"
path = "src/lib.rs"

# bench: enables benches/churn.rs (TASK-038 synthetic churn benchmark).
# Feature-gated so the 60-second scenario does not run on every PR; the nightly
# CI job passes --features bench explicitly.
# Run: cargo test --features bench --test churn -- --nocapture
[features]
bench = []

[[test]]
name = "churn"
path = "benches/churn.rs"
required-features = ["bench"]

# Suppress the Cargo auto-discovery bench target for benches/churn.rs.
# The file is a tokio #[test] scenario (not a libtest Bencher fn), so it
# is wired as a [[test]] above, not a standard [[bench]]. The explicit
# [[bench]] entry with harness = false prevents Cargo from auto-discovering
# a second target for the same path and emitting a "present in multiple
# build targets" warning.
[[bench]]
name = "churn"
path = "benches/churn.rs"
harness = false
test = false
required-features = ["bench"]

[dependencies]
slint = { version = "1.16.1", default-features = false, features = ["std", "compat-1-2", "renderer-software", "backend-winit-x11"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
jiff = "0.2"
secrecy = { version = "0.8", features = ["alloc"] }
smol_str = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
toml = "0.8"
tracing-test = { version = "0.2", default-features = false }
url = "2"
# rand: used in src/ha/client.rs for exponential-backoff jitter (TASK-032).
# rand 0.8 is already a transitive dep via tokio-tungstenite; pinning it here
# makes the usage explicit and gives us access to SmallRng for seeded tests.
# Phase 4: if SBC profiles need different backoff bounds, surface via DeviceProfile.
rand = { version = "0.8", features = ["small_rng"] }
# SVG rasterization for icon resolver (TASK-010).
# These three crates are already pulled in transitively by slint; pinning them
# as direct deps makes the version dependency explicit and keeps cargo from
# silently upgrading the transitive copy out from under our code.
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
