[package]
name = "hanui"
version = "0.1.0"
edition = "2021"
# Slint UI is compiled at build time from ui/slint/main_window.slint via
# build.rs (slint-build); src/ui/bridge.rs picks up the generated Rust types
# through `slint::include_modules!()` (TASK-043).
build = "build.rs"

[[bin]]
name = "hanui"
path = "src/main.rs"

[lib]
name = "hanui"
path = "src/lib.rs"

[features]
# bench: enables benches/churn.rs (TASK-038 synthetic churn benchmark).
# Nightly CI only. Run: cargo test --features bench --test churn -- --nocapture
bench = []
# soak: enables the 10-minute memory soak test (TASK-039).
# Nightly CI only. Run: cargo test --features soak --test soak_tests -- --nocapture
soak = []

[[test]]
name = "churn"
path = "benches/churn.rs"
required-features = ["bench"]

# Suppress the Cargo auto-discovery bench target for benches/churn.rs.
# The file is a tokio #[test] scenario (not a libtest Bencher fn), so it
# is wired as a [[test]] above. The explicit [[bench]] entry with
# harness = false prevents Cargo from auto-discovering a second target
# for the same path.
[[bench]]
name = "churn"
path = "benches/churn.rs"
harness = false
test = false
required-features = ["bench"]

# TASK-064 per-dispatch CPU micro-bench. Same shape as benches/churn.rs:
# a tokio #[test] scenario gated on the `bench` feature so plain
# `cargo test` never includes it. The CI-hard gate (median < 5 ms per
# dispatch — see `docs/backlog/TASK-064.md`) runs in nightly CI only.
[[test]]
name = "dispatcher_bench"
path = "benches/dispatcher.rs"
required-features = ["bench"]

# Pair the [[test]] target above with an explicit [[bench]] entry so
# Cargo's auto-discovery does not silently produce a second target for
# the same source path (mirrors the churn-bench pattern).
[[bench]]
name = "dispatcher_bench"
path = "benches/dispatcher.rs"
harness = false
test = false
required-features = ["bench"]

[[test]]
name = "soak_tests"
path = "tests/soak_tests.rs"
required-features = []

# Slint headless rendering harness POC (TASK-074) — runs the in-file smoke
# test that proves the `MinimalSoftwareWindow`-based harness captures a
# non-empty pixel buffer from `MainWindow`. The same file is also re-used
# as a `#[path = "../common/slint_harness.rs"]` module by TASK-073 golden-
# frame integration tests; declaring it as a [[test]] target here gives the
# harness its own runnable smoke without needing a wrapper file under
# `tests/` (which would have polluted the auto-discovered binary list).
# No new dev-deps required: the runtime `slint` dep already enables
# `renderer-software`, which is the only Slint feature the harness uses.
[[test]]
name = "slint_harness_smoke"
path = "tests/common/slint_harness.rs"

# SBC CPU smoke test binary — cross-compiled to aarch64 and run under QEMU.
# Explicitly declared so Cargo does not try to auto-discover tests/smoke/mod.rs
# alongside the existing tests/smoke.rs (TASK-016 Phase 1 smoke).
# The test is NOT in the default `cargo test` run because it requires:
#   (a) the aarch64-unknown-linux-gnu target, and
#   (b) qemu-aarch64 for execution.
# Nightly CI installs both and runs this binary explicitly (see
# .github/workflows/ci.yml sbc-cpu-smoke job).
[[test]]
name = "sbc_smoke"
path = "tests/smoke/mod.rs"

[dependencies]
slint = { version = "1.16.1", default-features = false, features = ["std", "compat-1-2", "renderer-software", "backend-winit-x11"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
jiff = "0.2"
secrecy = { version = "0.8", features = ["alloc"] }
smol_str = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
toml = "0.8"
tracing-test = { version = "0.2", default-features = false }
url = "2"
# rand: used in src/ha/client.rs for exponential-backoff jitter (TASK-032).
# rand 0.8 is already a transitive dep via tokio-tungstenite; pinning it here
# makes the usage explicit and gives us access to SmallRng for seeded tests.
# Phase 4: if SBC profiles need different backoff bounds, surface via DeviceProfile.
rand = { version = "0.8", features = ["small_rng"] }
# SVG rasterization for icon resolver (TASK-010).
# These three crates are already pulled in transitively by slint; pinning them
# as direct deps makes the version dependency explicit and keeps cargo from
# silently upgrading the transitive copy out from under our code.
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"

# Build-time compilation of `ui/slint/main_window.slint` (and its transitive
# imports) into Rust code that `slint::include_modules!()` picks up at compile
# time. Pinned to the same minor as the runtime `slint` dependency to avoid
# generated-code / runtime ABI skew.
[build-dependencies]
slint-build = "1.16.1"
