# Phase 6 sub-phase 6c (TASK-111) introduces a Cargo workspace so the Lovelace
# importer (`tools/lovelace-import/`) can live as a separate dev-time member
# without inflating the main `hanui` binary's dependency tree. Per
# `locked_decisions.lovelace_workspace_cargo_shape` in
# `docs/plans/2026-04-30-phase-6-advanced-widgets.md`.
[workspace]
members = [".", "tools/lovelace-import"]
resolver = "2"

[package]
name = "hanui"
version = "0.1.0"
edition = "2021"
# Slint UI is compiled at build time from ui/slint/main_window.slint via
# build.rs (slint-build); src/ui/bridge.rs picks up the generated Rust types
# through `slint::include_modules!()` (TASK-043).
build = "build.rs"

[[bin]]
name = "hanui"
path = "src/main.rs"

# Phase 4 kill-switch gate (TASK-078): confirms Slint GridLayout can express
# the column/row span behaviors required by the Phase 4 schema before TASK-079
# locks the schema. Exits 0 on GREEN (all three behaviors pass), 1 on
# SCOPE_REDUCE (any behavior fails — CTO + founder decide schema trim before
# TASK-079 merges). See docs/plans/2026-04-29-phase-4-layout.md
# `locked_decisions.span_prototype_kill_switch` for the exact criteria.
[[example]]
name = "span_check"
path = "examples/span_check.rs"

[lib]
name = "hanui"
path = "src/lib.rs"

[features]
# bench: enables benches/churn.rs (TASK-038 synthetic churn benchmark).
# Nightly CI only. Run: cargo test --features bench --test churn -- --nocapture
bench = []
# soak: enables the 10-minute memory soak test (TASK-039).
# Nightly CI only. Run: cargo test --features soak --test soak_tests -- --nocapture
soak = []

[[test]]
name = "churn"
path = "benches/churn.rs"
required-features = ["bench"]

# Suppress the Cargo auto-discovery bench target for benches/churn.rs.
# The file is a tokio #[test] scenario (not a libtest Bencher fn), so it
# is wired as a [[test]] above. The explicit [[bench]] entry with
# harness = false prevents Cargo from auto-discovering a second target
# for the same path.
[[bench]]
name = "churn"
path = "benches/churn.rs"
harness = false
test = false
required-features = ["bench"]

# TASK-064 per-dispatch CPU micro-bench. Same shape as benches/churn.rs:
# a tokio #[test] scenario gated on the `bench` feature so plain
# `cargo test` never includes it. The CI-hard gate (median < 5 ms per
# dispatch — see `docs/backlog/TASK-064.md`) runs in nightly CI only.
[[test]]
name = "dispatcher_bench"
path = "benches/dispatcher.rs"
required-features = ["bench"]

# Pair the [[test]] target above with an explicit [[bench]] entry so
# Cargo's auto-discovery does not silently produce a second target for
# the same source path (mirrors the churn-bench pattern).
[[bench]]
name = "dispatcher_bench"
path = "benches/dispatcher.rs"
harness = false
test = false
required-features = ["bench"]

[[test]]
name = "soak_tests"
path = "tests/soak_tests.rs"
required-features = []

# Slint headless rendering harness POC (TASK-074) — runs the in-file smoke
# test that proves the `MinimalSoftwareWindow`-based harness captures a
# non-empty pixel buffer from `MainWindow`. The same file is also re-used
# as a `#[path = "../common/slint_harness.rs"]` module by TASK-073 golden-
# frame integration tests; declaring it as a [[test]] target here gives the
# harness its own runnable smoke without needing a wrapper file under
# `tests/` (which would have polluted the auto-discovered binary list).
# No new dev-deps required: the runtime `slint` dep already enables
# `renderer-software`, which is the only Slint feature the harness uses.
[[test]]
name = "slint_harness_smoke"
path = "tests/common/slint_harness.rs"

# SBC CPU smoke test binary — cross-compiled to aarch64 and run under QEMU.
# Explicitly declared so Cargo does not try to auto-discover tests/smoke/mod.rs
# alongside the existing tests/smoke.rs (TASK-016 Phase 1 smoke).
# The test is NOT in the default `cargo test` run because it requires:
#   (a) the aarch64-unknown-linux-gnu target, and
#   (b) qemu-aarch64 for execution.
# Nightly CI installs both and runs this binary explicitly (see
# .github/workflows/ci.yml sbc-cpu-smoke job).
[[test]]
name = "sbc_smoke"
path = "tests/smoke/mod.rs"

[dependencies]
slint = { version = "1.16.1", default-features = false, features = ["std", "compat-1-2", "renderer-software", "backend-winit-x11"] }
serde = { version = "1", features = ["derive"] }
# YAML loader for dashboard config (Phase 4 TASK-080). NOT the archived dtolnay/serde_yaml
# crate — that crate was archived in 2024 and is explicitly unmaintained. See
# locked_decisions.serde_yaml_crate_choice in docs/plans/2026-04-29-phase-4-layout.md.
serde_yaml_ng = "0.10"
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
jiff = "0.2"
secrecy = { version = "0.8", features = ["alloc"] }
smol_str = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
toml = "0.8"
tracing-test = { version = "0.2", default-features = false }
url = "2"
# rand: used in src/ha/client.rs for exponential-backoff jitter (TASK-032).
# rand 0.8 is already a transitive dep via tokio-tungstenite; pinning it here
# makes the usage explicit and gives us access to SmallRng for seeded tests.
# Phase 4: if SBC profiles need different backoff bounds, surface via DeviceProfile.
rand = { version = "0.8", features = ["small_rng"] }
# SVG rasterization for icon resolver (TASK-010).
# These three crates are already pulled in transitively by slint; pinning them
# as direct deps makes the version dependency explicit and keeps cargo from
# silently upgrading the transitive copy out from under our code.
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
# LRU cache for src/ha/http.rs (TASK-097). Locked at 0.13 per
# locked_decisions.lru_crate_choice in docs/plans/2026-04-30-phase-6-advanced-widgets.md.
# SBOM review required before merge (security-engineer).
lru = "0.13"
# Async HTTP client for src/ha/http.rs (TASK-097). reqwest is chosen for
# its rustls integration (consistent with tokio-tungstenite) and native
# async/await support. Disables default-features (avoids openssl dep).
# Deferred construction via OnceLock keeps HaHttpClient::new allocation-free.
# SBOM review required before merge (security-engineer).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
# Image decoding for src/ha/http.rs CacheEntry::ImageBuffer (TASK-097).
# Provides RGBA8 decode-on-insert for camera snapshots and media artwork.
# Only JPEG and PNG are required for HA camera snapshots and media artwork;
# GIF and BMP are excluded to minimise linked code size.
# SBOM review required before merge (security-engineer).
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Build-time compilation of `ui/slint/main_window.slint` (and its transitive
# imports) into Rust code that `slint::include_modules!()` picks up at compile
# time. Pinned to the same minor as the runtime `slint` dependency to avoid
# generated-code / runtime ABI skew.
[build-dependencies]
slint-build = "1.16.1"
